add readme file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <div class="w-full md:w-1/2 h-screen bg-slate-200 ">
 
         <div class="mx-auto w-96">
-            <img class="h-20 w-30 mt-56" src="https://app.counseal.com/uploads/domain/39692/logo/200x60-dark_0d06cb13f7bc58f91c4b74ff0e6e852d.svg" alt="Counseal"> </img>
+            <img class="h-20 w-30 mt-56" src="https://app.counseal.com/uploads/domain/39692/logo/200x60-dark_0d06cb13f7bc58f91c4b74ff0e6e852d.svg" alt="Counseal"> 
+            </img>
 
             <form class="align-center" action="/action_page.php">
                 
@@ -29,7 +30,9 @@
             <div class="text-xs">
 
                 <input type="checkbox" id="select" name="select" value="select">
-                <label for="select" class="whitespace-pre">Remember Me      <a href="https://app.counseal.com/site/havingTrouble"> (Having Trouble?)            </a></label>
+                <label for="select" class="whitespace-pre">Remember Me      
+                  <a href="https://app.counseal.com/site/havingTrouble"> (Having Trouble?)            </a>
+                </label>
                 <input  type="submit" value="Login" class="bg-blue-400 text-lg font-serif text-slate-600 p-1">
                 <br>            
             
